docs: fix btn gap for all page

--- a/public/assets/style.scss
+++ b/public/assets/style.scss
@@ -34,8 +34,9 @@
     }
   }
 
-  .exmaple-button {
-    .btn {
+  .exmaple-button,
+  .exmaple-all {
+    >.btn {
       margin-right: 5px;
     }
   }
